# openaroam

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  datadefs.cpp  datadefs.h  dataprocessor.cpp  dataprocessor.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  interface.cpp  interface.h  main.cpp  microscope.cpp  microscope.h  pathhandler.cpp  pathhandler.h  scanprocedure.cpp  scanprocedure.h  stage.cpp  stage.h
unit_tests/: test_path_handler.cpp
